fix(select): Add spacing to options in select for FF
Resolves pink-design/guide #1176

--- a/src/components/Select/_select.scss
+++ b/src/components/Select/_select.scss
@@ -58,6 +58,10 @@
     }
   }
 
+  .#{$prefix}--select-option {
+    padding: 0.25rem;
+  }
+
   // Override some Firefox user-agent styles
   @-moz-document url-prefix() {
     .#{$prefix}--select-option {
